<resources>
    <string name="app_name">My Application Agua</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="hint_calcular_btn">Calcular Ingestão Diária</string>
    <string name="hint_lembrete_btn">Lembrete</string>
    <string name="hint_alarme_btn">Alarme</string>
    <string name="hint_hora">00</string>
    <string name="hint_2_pontos">:</string>
    <string name="hint_minutos">00</string>
    <string name="toast_peso">Digite seu peso</string>
    <string name="toast_idade">Digite sua idade</string>
    <string name="alarme_msg">Hora de beber agua !!</string>

</resources>