<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/menino"
            app:layout_constraintBottom_toBottomOf="@id/container_header"
            app:layout_constraintStart_toStartOf="@id/container_header" />

        <ImageView
            android:id="@+id/refresh_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/refresh_icon"
            app:layout_constraintBottom_toBottomOf="@id/container_header"
            app:layout_constraintEnd_toEndOf="@id/container_header"
            app:layout_constraintTop_toTopOf="@id/container_header" />

        <EditText
            android:id="@+id/edit_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="15dp"
            android:textColor="@color/azul_escuro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_header" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:textColor="@color/azul_escuro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_header" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_degrade_botao"
            android:padding="8dp"
            android:text="@string/hint_calcular_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_idade" />

        <ImageView
            android:id="@+id/garrafa_de_agua"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/garrafa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_calcular" />

        <TextView
            android:id="@+id/txt_resultado_media_diaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:padding="4dp"
            android:text="12345"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/garrafa_de_agua"
            app:layout_constraintEnd_toEndOf="@id/garrafa_de_agua"
            app:layout_constraintStart_toStartOf="@id/garrafa_de_agua"
            app:layout_constraintTop_toTopOf="@id/garrafa_de_agua" />

        <Button
            android:id="@+id/btn_definir_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/hint_lembrete_btn"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/garrafa_de_agua" />

        <Button
            android:id="@+id/btn_definir_alarme_no_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/hint_alarme_btn"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/garrafa_de_agua" />

        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:text="@string/hint_hora"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete" />

        <TextView
            android:id="@+id/txt_dois_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/hint_2_pontos"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/txt_hora"
            app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete" />

        <TextView
            android:id="@+id/txt_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/hint_minutos"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/txt_dois_pontos"
            app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

